[gd_scene load_steps=63 format=2]

[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Effects/HitEffect.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player/SwordHitbox.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Shadows/MediumShadow.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=29]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "slash_animation_start"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPosition/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=30]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "slash_animation_start"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPosition/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=31]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "slash_animation_start"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPosition/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=32]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "slash_animation_start"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPosition/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPosition/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=46]
resource_name = "RollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_finished"
} ]
}

[sub_resource type="Animation" id=47]
resource_name = "RollLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_finished"
} ]
}

[sub_resource type="Animation" id=48]
resource_name = "RollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_finished"
} ]
}

[sub_resource type="Animation" id=49]
resource_name = "RollUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_finished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "RunRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RunUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( 1.1, 0 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( -1.1, 0 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "RollRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=54]
blend_point_0/node = SubResource( 50 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 51 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 52 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 53 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=58]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Attack/node = SubResource( 37 )
states/Attack/position = Vector2( 767, 109 )
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 376, 109 )
states/Roll/node = SubResource( 54 )
states/Roll/position = Vector2( 108, 109 )
states/Run/node = SubResource( 26 )
states/Run/position = Vector2( 376, 221 )
transitions = [ "Idle", "Run", SubResource( 27 ), "Run", "Idle", SubResource( 28 ), "Idle", "Attack", SubResource( 38 ), "Run", "Attack", SubResource( 39 ), "Attack", "Idle", SubResource( 40 ), "Attack", "Run", SubResource( 41 ), "Idle", "Roll", SubResource( 55 ), "Run", "Roll", SubResource( 56 ), "Roll", "Idle", SubResource( 57 ), "Roll", "Run", SubResource( 58 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="CapsuleShape2D" id=59]
height = 12.0

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": false,
"name": "Hit",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=60]
radius = 7.0
height = 2.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
hframes = 60
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 29 )
anims/AttackLeft = SubResource( 30 )
anims/AttackRight = SubResource( 31 )
anims/AttackUp = SubResource( 32 )
anims/IdleDown = SubResource( 7 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 9 )
anims/IdleUp = SubResource( 10 )
anims/RESET = SubResource( 3 )
anims/RollDown = SubResource( 46 )
anims/RollLeft = SubResource( 47 )
anims/RollRight = SubResource( 48 )
anims/RollUp = SubResource( 49 )
anims/RunDown = SubResource( 4 )
anims/RunLeft = SubResource( 5 )
anims/RunRight = SubResource( 2 )
anims/RunUp = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 16 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )

[node name="HitboxPosition" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = 3.14159

[node name="SwordHitbox" parent="HitboxPosition" instance=ExtResource( 4 )]
collision_layer = 2
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="HitboxPosition/SwordHitbox" index="0"]
position = Vector2( 0, 14 )
rotation = 1.5708
shape = SubResource( 59 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="HitboxPosition"]
visible = false
position = Vector2( 1, 26 )
frames = SubResource( 45 )
animation = "Hit"

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 60 )

[connection signal="animation_finished" from="HitboxPosition/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPosition/SwordHitbox"]
[editable path="Hurtbox"]
